[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_constants/separation = 50
alignment = 1

[node name="Test" type="Button" parent="Panel/VBoxContainer"]
margin_top = 120.0
margin_right = 824.0
margin_bottom = 140.0
text = "Local Test"

[node name="Listen" type="Button" parent="Panel/VBoxContainer"]
margin_top = 190.0
margin_right = 824.0
margin_bottom = 210.0
text = "Listener"

[node name="Send" type="Button" parent="Panel/VBoxContainer"]
margin_top = 260.0
margin_right = 824.0
margin_bottom = 280.0
text = "Sender"

[connection signal="pressed" from="Panel/VBoxContainer/Test" to="." method="_on_Test_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Listen" to="." method="_on_Listen_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Send" to="." method="_on_Send_pressed"]
